# LeetcodePractice

./: .gitignore  115.py  121.py  125.py  13.py  14.py  141.py  167.py  169.py  17.py  189.py  198.py  2.py  205.py  2095.py  21.py  217.py  219.py  221.py  222.py  228.py  26.py  28.py  3.py  35.py  383.py  46.py  5.py  53.py  530.py  54.py  55.py  58.py  70.py  71.py  80.py  88.py  README.md
CPPPractice/: 1732.h  2215.h  CMakeLists.txt  Solution1004.h  Solution1071.h  Solution11.h  Solution14.h  Solution1431.h  Solution1456.h  Solution151.h  Solution1679.h  Solution169.h  Solution1768.h  Solution219.h  Solution238.h  Solution27.h  Solution28.h  Solution283.h  Solution334.h  Solution345.h  Solution383.h  Solution392.h  Solution443.h  Solution605.h  Solution643.h  Solution67.h  Solution724.h
CppPractice/: CMakeLists.txt  Solution1.h  Solution121.h  Solution125.h  Solution14.h  Solution151.h  Solution169.h  Solution20.h  Solution202.h  Solution205.h  Solution21.h  Solution26.h  Solution27.h  Solution28.h  Solution392.h  Solution56.h  Solution9.cpp  Solution9.h  main.cpp
JavaPractice/src/: Main.java  Solution1.java  Solution121.java  Solution125.java  Solution13.java  Solution14.java  Solution169.java  Solution20.java  Solution205.java  Solution21.java  Solution26.java  Solution27.java  Solution28.java  Solution383.java  Solution4.java  Solution56.java  Solution7.java  Solution9.java
Neetcode Practise/: Contains Duplicate.py  Group Anagrams.py  Two Sum.py  Valid Anagram.py
PythonPractice/: 1.py  10.py  100.py  1004.py  101.py  103.py  104.py  1050.py  106.py  11.py  111.py  1137.py  114.py  1148.py  1161.py  117.py  118.py  119.py  12.py  1207.py  124.py  128.py  1280.py  129.py  131.py  1318.py  134.py  136.py  1372.py  1378.py  138.py  139.py  1431.py  1448.py  1456.py  146.py  1466.py  1484.py  1493.py  150.py  (+114 more)
SQLPractice/: 1075.sql  1211.sql  1581.sql  1661.sql  1757.sql  197.sql  577.sql  619.sql  620.sql
SqlPractice/: 1683.sql  584.sql
erlang_attempts/: 1.erl  125.erl  28.erl
python_attempts/: 102.py  108.py  11.py  112.py  125.py  137.py  149.py  15.py  155.py  202.py  209.py  226.py  242.py  27.py  289.py  290.py  36.py  380.py  46.py  56.py  61.py  63.py  66.py  67.py  69.py  77.py  97.py
